# LawScape

./: folder_structure.txt  pyproject.toml  requirements.txt
docs/architecture/: system_architecture.md
docs/ontology/: legal_ontology.md
docs/specifications/: project_specification.md
src/lawscape.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/lawscape/graph/: graph_builder.py
src/lawscape/ontology/: entity_types.py  relationship_types.py
src/ontology/: common_properties.py
tests/: test_graph_builder.py
